add extension functions for checking identity put the identity data struct here

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,9 @@ rego-extensions = []
 # Newton-specific Rego extensions for Ethereum cryptography
 newton-crypto = ["dep:alloy-primitives", "dep:k256", "hex"]
 
+# Newton-specific Rego extensions for Identity checks
+newton-identity = ["dep:alloy-sol-types"]
+
 # This feature enables some testing utils for OPA tests.
 opa-testutil = []
 rand = ["dep:rand"]
@@ -133,7 +136,8 @@ mimalloc = { path = "mimalloc", optional = true }
 indexmap = { version = "2.12.1", default-features = false, features = ["serde"], optional = true }
 bincode = { version = "2.0.1", default-features = false, features = ["alloc", "serde"], optional = true }
 
-# Newton-crypto dependencies
+# Newton extension dependencies
+alloy-sol-types = { version = "0.8", optional = true, default-features = false }
 alloy-primitives = { version = "0.8", optional = true, default-features = false }
 k256 = { version = "0.13", optional = true, default-features = false, features = ["ecdsa"] }
 
