respond to nits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,7 @@ rego-extensions = []
 newton-crypto = ["dep:alloy-primitives", "dep:k256", "hex"]
 
 # Newton-specific Rego extensions for Identity checks
-newton-identity = ["dep:chrono"]
+newton-identity = ["dep:chrono", "std"]
 
 # This feature enables some testing utils for OPA tests.
 opa-testutil = []
